# dLOGIC

./: CMakeLists.txt  README.md  setup_sudo_nopass.sh
include/: helper.h
src/: helper.cpp  main.cpp
